# executive-command-center

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pr10-ruff.txt  pr11-hardening-pytest.txt  pr11-mypy.txt  pr11-pytest.txt  pr11-ruff.txt  pr12-typecheck.txt  pr18-bootstrap-report.txt  pr7-final-report.txt  pr7-fix-report.txt  pr7-mypy.txt  pr7-ruff.txt  pr7-test-layout.txt  pr8-pytest.txt  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: spec-change-request.md  specification-change-request.md
.github/workflows/: ci.yml  ollama-evaluation.yml  phase1-acceptance.yml  pr10-format.yml  pr11-diagnostic.yml  pr12-diagnostic.yml  pr18-bootstrap-diagnostic.yml  pr5-review-fix.yml  pr5-schema-diagnostic.yml  pr6-fix-audit.yml  pr6-format.yml  pr6-pytest-diagnostic.yml  pr6-review-fix.yml  pr7-finalize.yml  pr7-format.yml  pr7-mypy-diagnostic.yml  pr7-review-diagnostic.yml  pr7-review-fixes.yml  pr8-final-cleanup.yml  pr8-finalize.yml  pr8-format.yml  pr8-pytest-diagnostic.yml  pr8-review-fixes.yml  pr9-format-2.yml  (+2 more)
backend/: Dockerfile  alembic.ini
config/: phase1-acceptance.json
docs/: .setup-marker  00-document-control.md  01-product-definition.md  CONTRIBUTING.md  RFC-000.md  RFC-001.md  RFC-002.md  RFC-003.md  RFC-004.md  RFC-005.md  ROADMAP.md  SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package.json  playwright.config.ts  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: __init__.py  apply_pr4_review_fixes.py  backup.sh  bootstrap_dev.py  check_phase1_acceptance.py  check_phase3_prohibited_signals.py  fix_pr5_review.py  fix_trace_ids.py  phase1_evidence.py  phase1_performance_evidence.py  pr7_duplicate_fix.py  pr7_review_fix.py  rebuild_knowledge_projections.py  restore.sh  seed_phase1_acceptance.py  verify_restore.sh
tests/: conftest.py  phase1_dataset.py  test_ai_runtime_budgets_postgres.py  test_ai_runtime_evaluation_live_ollama.py  test_ai_runtime_evaluation_postgres.py  test_ai_runtime_routing_postgres.py  test_ai_runtime_runtime_postgres.py  test_ai_runtime_tools_postgres.py  test_ai_runtime_validation_postgres.py  test_ai_runtime_versioning_postgres.py  test_attention_capacity_postgres.py  test_attention_meeting_prep_postgres.py  test_attention_planning_postgres.py  test_attention_risk_reviews_postgres.py  test_attention_waiting_postgres.py  test_bootstrap_dev.py  test_calendar_meetings_postgres.py  test_check_phase3_prohibited_signals.py  test_commitment_contract.py  test_commitment_postgres.py  test_dashboard_briefs_postgres.py  test_dashboard_performance_postgres.py  test_dev_bootstrap.py  test_evidence_postgres.py  test_health.py  test_identity_person_organizations_postgres.py  test_knowledge_claims_postgres.py  test_knowledge_embeddings_postgres.py  test_knowledge_entities_postgres.py  test_knowledge_entity_lookup_performance_postgres.py  test_knowledge_entity_operations_performance_postgres.py  test_knowledge_entity_operations_postgres.py  test_knowledge_rebuild_performance_postgres.py  test_knowledge_relationships_postgres.py  test_knowledge_resolution_performance_postgres.py  test_knowledge_resolution_postgres.py  test_knowledge_retrieval_benchmark_postgres.py  test_knowledge_retrieval_performance_postgres.py  test_knowledge_retrieval_postgres.py  test_knowledge_timeline_performance_postgres.py  (+21 more)
(+326 files in other folders)
