[project]
name = "executive-command-center"
version = "0.1.0"
description = "Local-first AI Executive Operating System"
requires-python = "==3.14.*"
dependencies = [
  "alembic==1.16.4",
  "argon2-cffi==25.1.0",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "psycopg[binary]==3.3.4",
  "sqlalchemy==2.0.41",
  "starlette==1.3.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
# Not installed by default (backend/Dockerfile's `uv sync --frozen --no-dev`
# never requests this extra) -- sentence-transformers pulls in torch, which
# publishes no musl/Alpine-compatible wheels at all, and the production
# image is deliberately Alpine for a smaller, more hardened build. This
# mirrors Settings.embeddings_enabled's own off-by-default design: a
# deployment that wants Task 7's embeddings/hybrid retrieval builds a custom
# image with `uv sync --extra embeddings`, matching CI's `backend` job
# (native Linux glibc, not Alpine), which installs it to run the real-model
# tests. See ADR-0011.
embeddings = [
  "pgvector==0.5.0",
  "sentence-transformers==5.6.0",
]

[dependency-groups]
dev = [
  "mypy==1.16.1",
  "pip-audit==2.9.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "ruff==0.12.3",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ecc"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "backend"

[[tool.mypy.overrides]]
# sentence-transformers ships no type stubs / py.typed marker.
module = "sentence_transformers.*"
ignore_missing_imports = true
